# gpu-cuda-self-organising-maps

./: .gitattributes  CMakeLists.txt  README.md
Report/DOCs/: High Performance Computing - GPU’s Implementation of Self-Organising Maps (S.O.M. Algorithm) - Report.docx
data/inputs/: correlated-stream.data  iris.data
data/outputs/: correlated-stream-test-cpu-sequential-1.data  correlated-stream-test-cpu-sequential-2.data  correlated-stream-test-gpu-cuda-1.data  correlated-stream-test-gpu-cuda-optimised-2.data  iris-test-cpu-sequential-1.data  iris-test-cpu-sequential-2.data  iris-test-gpu-cuda-2.data  iris-test-gpu-cuda-optimised-1.data
imgs/PSDs/: cuda-streams-performance-comparison-1.psd
include/: cpu_self_organising_maps_sequential.hpp  data_reader.hpp  gpu_self_organising_maps.hpp  gpu_self_organising_maps_CUDA.hpp  gpu_self_organising_maps_CUDA_optimised.hpp  gpu_self_organising_maps_optimised.hpp  hpc_project_1.hpp  timer.hpp
report/DOCs/: High Performance Computing - GPU’s Implementation of Self-Organising Maps (S.O.M. Algorithm) - Report.docx
src/: cpu_som_sequential  cpu_som_sequential.cpp  gpu_som_cuda  gpu_som_cuda.cu  gpu_som_cuda_optimised  gpu_som_cuda_optimised.cu
